kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kii-final
  labels:
    name: kii-final
