kubernetes/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kii-final-deployment
  namespace: kii-final
spec:
  replicas: 5
  selector:
    matchLabels:
      app: kii-final-app  # Updated label to match pod template
  template:
    metadata:
      labels:
        app: kii-final-app  # Updated label to match deployment selector
    spec:
      containers:
        - name: kii-final-project-app
          image: donestoilko/kii_final:latest
          imagePullPolicy: Always  # Consider whether this policy is appropriate
          ports:
            - containerPort: 8080
