kubernetes/db-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kii-final-postgres
  namespace: kii-final
spec:
  serviceName: kii-final-db-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        namespace: kii-final
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
      volumes:
        - name: kii-final-db-data
          persistentVolumeClaim:
            claimName: kii-final-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kii-final-db-service
  namespace: kii-final
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
