kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kii-final-service
  namespace: kii-final
spec:
  selector:
    app: kii-final-app
  ports:
      - port: 80
        targetPort: 8080
